# mir-kiosk

./: .gitignore  bors.toml  configure  run-miral  snapcraft.yaml
.github/workflows/: snap.yml
drm-init-gamma/: CMakeLists.txt
drm-init-gamma/src/: CMakeLists.txt  drm-init-gamma.cpp
snap/: snapcraft.yaml
snap/hooks/: configure  install  post-refresh
snap/local/: plugs.json  slots.json
snap/plugins/: ppa.py
